Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10682

Race condition between ANALYZE TABLE and STATS_AUTO_RECALC

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-deb-precise-amd64/builds/6502/steps/test_5/logs/stdio

      innodb.innodb_stats 'innodb_plugin'      w3 [ fail ]
              Test ended at 2016-06-28 07:48:15
       
      CURRENT_TEST: innodb.innodb_stats
      --- /usr/share/mysql/mysql-test/suite/innodb/r/innodb_stats.result	2016-06-28 04:58:03.000000000 +0300
      +++ /run/shm/var/3/log/innodb_stats.reject	2016-06-28 07:48:14.987555677 +0300
      @@ -174,11 +174,11 @@
       stat_name IN ('n_diff_pfx01', 'n_diff_pfx02', 'n_leaf_pages', 'size')
       ORDER BY stat_name;
       stat_name	n_diff_pfx01
      -stat_value	1
      +stat_value	0
       sample_size	1
       stat_description	a
       stat_name	n_diff_pfx02
      -stat_value	3
      +stat_value	0
       sample_size	1
       stat_description	a,DB_ROW_ID
       stat_name	n_leaf_pages
      @@ -226,11 +226,11 @@
       stat_name IN ('n_diff_pfx01', 'n_diff_pfx02', 'n_leaf_pages', 'size')
       ORDER BY stat_name;
       stat_name	n_diff_pfx01
      -stat_value	1
      +stat_value	0
       sample_size	1
       stat_description	a
       stat_name	n_diff_pfx02
      -stat_value	10
      +stat_value	0
       sample_size	1
       stat_description	a,DB_ROW_ID
       stat_name	n_leaf_pages
      @@ -278,11 +278,11 @@
       stat_name IN ('n_diff_pfx01', 'n_diff_pfx02', 'n_leaf_pages', 'size')
       ORDER BY stat_name;
       stat_name	n_diff_pfx01
      -stat_value	2
      +stat_value	0
       sample_size	1
       stat_description	a
       stat_name	n_diff_pfx02
      -stat_value	2
      +stat_value	0
       sample_size	1
       stat_description	a,DB_ROW_ID
       stat_name	n_leaf_pages
      @@ -330,11 +330,11 @@
       stat_name IN ('n_diff_pfx01', 'n_diff_pfx02', 'n_leaf_pages', 'size')
       ORDER BY stat_name;
       stat_name	n_diff_pfx01
      -stat_value	2
      +stat_value	0
       sample_size	1
       stat_description	a
       stat_name	n_diff_pfx02
      -stat_value	3
      +stat_value	0
       sample_size	1
       stat_description	a,DB_ROW_ID
       stat_name	n_leaf_pages
      @@ -382,11 +382,11 @@
       stat_name IN ('n_diff_pfx01', 'n_diff_pfx02', 'n_leaf_pages', 'size')
       ORDER BY stat_name;
       stat_name	n_diff_pfx01
      -stat_value	3
      +stat_value	0
       sample_size	1
       stat_description	a
       stat_name	n_diff_pfx02
      -stat_value	3
      +stat_value	0
       sample_size	1
       stat_description	a,DB_ROW_ID
       stat_name	n_leaf_pages
      @@ -434,11 +434,11 @@
       stat_name IN ('n_diff_pfx01', 'n_diff_pfx02', 'n_leaf_pages', 'size')
       ORDER BY stat_name;
       stat_name	n_diff_pfx01
      -stat_value	3
      +stat_value	0
       sample_size	1
       stat_description	a
       stat_name	n_diff_pfx02
      -stat_value	5
      +stat_value	0
       sample_size	1
       stat_description	a,DB_ROW_ID
       stat_name	n_leaf_pages
      @@ -461,7 +461,7 @@
       SEQ_IN_INDEX	1
       COLUMN_NAME	a
       COLLATION	A
      -CARDINALITY	5
      +CARDINALITY	2
       SUB_PART	NULL
       PACKED	NULL
       NULLABLE	YES
      @@ -486,11 +486,11 @@
       stat_name IN ('n_diff_pfx01', 'n_diff_pfx02', 'n_leaf_pages', 'size')
       ORDER BY stat_name;
       stat_name	n_diff_pfx01
      -stat_value	5
      +stat_value	0
       sample_size	1
       stat_description	a
       stat_name	n_diff_pfx02
      -stat_value	10
      +stat_value	0
       sample_size	1
       stat_description	a,DB_ROW_ID
       stat_name	n_leaf_pages
      @@ -513,7 +513,7 @@
       SEQ_IN_INDEX	1
       COLUMN_NAME	a
       COLLATION	A
      -CARDINALITY	10
      +CARDINALITY	2
       SUB_PART	NULL
       PACKED	NULL
       NULLABLE	YES
       
      mysqltest: Result length mismatch
       
       - skipping '/run/shm/var/3/log/innodb.innodb_stats-innodb_plugin/'
       
      Retrying test innodb.innodb_stats, attempt(2/3)...
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.